# Modelowanie

./: README.md  animacja.cpp  disk_simulation
zadanie_3/: animacja.cpp
zadanie_4/: animacja.cpp  disk_simulation
zadanie_5/: CMakeLists.txt  main.cpp  particle_system  particle_system.cpp  particle_system.h  sterowanie.txt
zadanie_6/: holiday_scene  main.cpp  particle_system_with_snow
zadanie_7/: main.cpp  model_fizyczny  sling_game
